INTRO TO discussion

--- a/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
+++ b/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
@@ -739,9 +739,14 @@ Article on intangibility of game feel.2025-1-8-DiscussionConclusion
 
 ## Discussion
 
-This discussion section discusses the complexity of the expanded object of activity and the diverse mediational uses of GDPs using a activity theory as a framework. It summarises the different uses of GDPs and notes the limitations of 3GAT to represent such diversity of mediational strategies.  
+NEW START
+This discussion draws together the different mediational uses of gameplay design patterns observed across the chapter, positioning GDPs as germ cells that supported both the development of design fluency and, in some cases, the emergence of agency. By tracing their use across individual, interpersonal, and cultural planes of activity, the analysis highlighted the varied ways GDPs structured participation, scaffolded interaction, and enabled learners to engage with the design process. The discussion now considers how these patterns of use contributed to learners’ capacity to act with increasing flexibility and purpose. It explores the role of GDPs in building fluency through repeated use, how such fluency became a platform for instrumental agency, and how this in turn fed into shifts in the object of activity — a trajectory developed further in Chapter 7.
 
-This discussion begins to address the challenge of communicating the diverse mediational strategies and the movement of repertoires between activity systems.
+
+In doing so, the analysis draws on concepts from both  CHAT and broader literature on computational fluency. While the third-generation activity theory (3GAT) framework proved useful in identifying and organising key contradictions and tensions within the activity system, it was at times limited in accounting for the diverse mediational roles GDPs played across activity systems [DEVELOP THIS MORE]. GDPs acted not only as tools but as shared references, and sources of motivation. Their role in sustaining engagement, supporting ideation, and structuring participation suggests they operated beyond the confines of any single activity system, instead shaping an emergent idioculture grounded in local, evolving repertoires of practice. The role of GDPs in this emerging idioculture is considered more explicitly below, particularly in relation to how cultural norms such as peer collaboration, humour, appropriate challenge, and home-informed interests were mutually constituted through game-making practices. These elements were not always provided within the learning design but evolved dynamically,  co-produced by participants.
+
+<!-- OLD START
+
 
 I then turn to the motivations and a synthesis  of an expanded concept of the object of activity involved. My attention returns to concepts of flow and computational fluency present in CGD&P research, suggesting an extension to include developing concepts of agency in the process.
 
@@ -751,10 +756,10 @@ ADD THIS IN OR SIGNPOST?
 The term idioculture [@cole_design-based_2016], a local, non-geographical, non-demographic community where culture emerges via valued behaviours [@lecusay_telementoring_2015], can be applied to the role of GDPs as component parts in the emergence of a community culture.
 
 Other characteristics and norms of the emerging idioculture stemming which stem from the GDP use have  been described above. Elements of peer learning, incorporation of home interests and behaviours, concepts of appropriate challenge. These examples are emerging process where cultural concepts are mutually constituted by different actors involved in the game making activity system. They emerge not solely due to their embedded mediational potential within GDPs use, but as products of an expanded shared object of activity.
+ -->
 
 
-
-### Addressing the use of GDPs in relation to understanding representing the processes of mediation process
+### Gameplay design patterns as mediating cultural resources
 
 Chapter 5, via a design narrative of the pedagogical design used, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed.
 
@@ -782,7 +787,7 @@ LINK TO EXPLORATION OF COMPLEX OBJECT BELOW?
 
 <!-- [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic],  -->
 
-3GAT guides researchers to describe expansions of the object of activity. To recap the complex nature of the component part of object according to activity theory, includes the physical or digital objects being worked, and the object concept incorporating the motivations of the participants and the overall activity [@blunden_activity_2023]. Part of the process of expansion of the complex object of activity, is driven by the unfixed nature of the motivations of those taking part within this research process [@cormier2008rhizomatic]. Chapter 5 charted shifting motivations via the changing learning design [^sm]. As a learning designer, in P3 I attempted to reduce play paradox outlined above by encouraging and highlighting social and cultural aspect of the object at play. Chapter 2 explored the diversity with in CGD&P research concerning motivations from developing programming skills and computational thinking other subject knowledge, systems thinking, to 21st Century skills. Within this literature, as explored in Chapter 2,  a strand grouped around different forms of technical fluency [@papert_technological_1995]  with common features of domain proficiency, self-expression and identity formation and an experience of flow. The following discussion contributes to this strand within CGD&P research.
+3GAT guides researchers  to describe expansions of the object of activity. To recap the complex nature of the component part of object according to activity theory, includes the physical or digital objects being worked, and the object concept incorporating the motivations of the participants and the overall activity [@blunden_activity_2023]. Part of the process of expansion of the complex object of activity, is driven by the unfixed nature of the motivations of those taking part within this research process [@cormier2008rhizomatic]. Chapter 5 charted shifting motivations via the changing learning design [^sm]. As a learning designer, in P3 I attempted to reduce play paradox outlined above by encouraging and highlighting social and cultural aspect of the object at play. Chapter 2 explored the diversity with in CGD&P research concerning motivations from developing programming skills and computational thinking other subject knowledge, systems thinking, to 21st Century skills. Within this literature, as explored in Chapter 2,  a strand grouped around different forms of technical fluency [@papert_technological_1995]  with common features of domain proficiency, self-expression and identity formation and an experience of flow. The following discussion contributes to this strand within CGD&P research.
 
 One of the motivational factors guiding the evolution of the learning design of this study was to keep participants able to effectively share their social identity within game making and thus remaining or in a state of flow [@mao_optimal_2016] [^fl]. The guiding principle being to build technical proficiency with the relevant technology to to allow the share interests and identity within a community of peers.
 
@@ -823,9 +828,9 @@ To extend the concepts of designing for fluidity, it is of value to explore the 
 
 ## Conclusion
 
-On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies. On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners. GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience. The observations of this chapter show the diversity and flexibility of uses of GDP as an mediational tool. The next chapter builds on this to propose the potential of GDPs as a relatable navigational framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.
+On a theoretical plane, this chapter has outlined the evolving use of GDPs as a mediational strategy to develop coding repertoires that are often shared. CHAT frames diverse uses of shared resources and concepts, in this case GDPs, as mediational strategies. On a cultural plane, using GDPs can support the propagation of technical and social game-making practices within an emerging community of learners. GDPs served both researchers and participants by _providing a common language_ to clarify learners’ expressions and researchers’ analysis of gameplay experience. The observations in this chapter highlight the diversity and flexibility of GDPs as mediational tools. The next chapter builds on this by proposing the potential of GDPs as a relatable navigational framework, positioned between being too concrete to be generalised and too abstract to be grasped by novice game makers.
 
-The findings identified a complex object with a diversity of motivation which pose challenges in communicating in simple terms in terms of what characteristics we are designing learning environments to develop. The candidates of proximal flow and computational fluency were explored in relation to existing research and gaps were identified in there coverage of the importance of learner agency and identify formation. In the next chapter characteristics and processes associated with fluency in this chapter are analysed using the lens of agency, in particular that of relational agency.
+This chapter has begun to address Research Question 2, which asked how a collection of gameplay design patterns can support CGD&P, particularly in relation to the abstract and concrete dimensions of existing pedagogies. The analysis showed how GDPs helped structure learner activity while also enabling flexible, situated adaptation. The interplay between abstract and concrete dimensions, only briefly touched on here, is taken up more fully in Chapter 7 in relation to how participants shaped and reframed the object of activity over time. The findings identified a complex and evolving object of activity, shaped by diverse participant motivations and not reducible to a single outcome. Rather than framing the design space around fixed goals such as computational fluency or flow, the chapter has illustrated how GDPs helped learners navigate this complexity. In the next chapter, these trajectories are examined through the lens of agency, with particular attention to how participants coordinated intentions and roles in shared activity.
 
 
 ## Footnotes
