--- a/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
+++ b/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
@@ -739,7 +739,7 @@ Article on intangibility of game feel.2025-1-8-DiscussionConclusion
 
 ## Discussion
 
-NEW START
+
 This discussion draws together the different mediational uses of gameplay design patterns observed across the chapter, positioning GDPs as germ cells that supported both the development of design fluency and, in some cases, the emergence of agency. By tracing their use across individual, interpersonal, and cultural planes of activity, the analysis highlighted the varied ways GDPs structured participation, scaffolded interaction, and enabled learners to engage with the design process. The discussion now considers how these patterns of use contributed to learners’ capacity to act with increasing flexibility and purpose. It explores the role of GDPs in building fluency through repeated use, how such fluency became a platform for instrumental agency, and how this in turn fed into shifts in the object of activity — a trajectory developed further in Chapter 7.
 
 
@@ -761,6 +761,13 @@ Other characteristics and norms of the emerging idioculture stemming which stem 
 
 ### Gameplay design patterns as mediating cultural resources
 
+<!-- * GDPs were used across individual, interpersonal, and cultural planes of activity, in line with Rogoff’s three planes framework \[@rogoff\_observing\_1995].
+* Their role went beyond surface scaffolding — GDPs served as **cultural tools** that helped learners coordinate ideas, make decisions, and engage with design at multiple levels.
+* Across the project, GDPs travelled flexibly between contexts (e.g. dialogue, sketching, code, planning), demonstrating **versatility as mediational means**.
+* As activity progressed, GDPs took on **new meanings** and applications — they became **germ cells** \[@engelstrom\_studies\_2011], small but generative concepts that seeded more complex understanding and creative action.
+* Rather than following the logic of fixed design stages, GDPs were taken up **opportunistically and recursively**, often re-entering the activity in unplanned ways.
+* This challenges linear design models and supports a **sociocultural view of design** as emergent, fluid, and shaped by shifting objects and mediational tools. -->
+
 Chapter 5, via a design narrative of the pedagogical design used, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed.
 
 This chapter has developed analysis of activity by focusing on the germ cell concept of GDPs used in a variety of ways, a summary of which has been represented in table form at the start of this chapter. GDPs are used in diverse ways by participants, peers and facilitators, as principle or supporting parts of mediational strategies including as as a lingua franca, as a motivational element, or as a way of structuring the learning experience and supporting resources. GDPS, are used not just mediation as a tool, but also as a concept, so much so that it merits it's own activity system.
@@ -781,13 +788,24 @@ LINK TO EXPLORATION OF COMPLEX OBJECT BELOW?
 
 <!-- ![Figure 6.x - Diverse mediational strategies and complex object of activity  ](./Pictures/ch_6_at_dia_2.png){width=95%} -->
 
-### Expanded object in terms of motivation - fluency towards agency
+### Developing flexible fluency
+
+<!--
+* Repeated, meaningful use of GDPs across diverse tools and contexts led to the development of **design fluency** — not just technical skill, but **confidence, adaptability, and context-sensitive decision-making**.
+* This fluency was not just individual; it was **distributed** across social interaction, shared artefacts, and emerging design practices \[@engelstrom\_learning\_2001].
+* GDP use reflected **flexibility and improvisation**, with participants remixing, adapting, and sometimes reinterpreting patterns to suit their evolving project needs.
+* Learners did not move through a clear sequence of design stages; instead, their GDP use blurred boundaries between ideation, prototyping, and refinement — often within the same session.
+* This kind of **responsive, improvisational fluency** is analytically distinct from simply "getting better at using a tool."
+* It aligns with **Resnick’s definition of computational fluency** as the capacity to both understand and creatively express ideas through computation \[@resnick\_sowing\_2009].
+* GDPs acted as structured supports that enabled learners to shift from replication to **personal and collaborative expression** — revealing fluency as both **procedural and expressive**.
+* This form of fluency became a **foundation** for agentic activity — enabling learners to reframe goals, make intentional choices, and signal emerging authorship. -->
+
 
 <!-- , a process starting from a point of facilitating a collaborative learning environment. While collaboration was certainly important, it did not summarise my motivations well. -->
 
 <!-- [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic],  -->
 
-3GAT guides researchers  to describe expansions of the object of activity. To recap the complex nature of the component part of object according to activity theory, includes the physical or digital objects being worked, and the object concept incorporating the motivations of the participants and the overall activity [@blunden_activity_2023]. Part of the process of expansion of the complex object of activity, is driven by the unfixed nature of the motivations of those taking part within this research process [@cormier2008rhizomatic]. Chapter 5 charted shifting motivations via the changing learning design [^sm]. As a learning designer, in P3 I attempted to reduce play paradox outlined above by encouraging and highlighting social and cultural aspect of the object at play. Chapter 2 explored the diversity with in CGD&P research concerning motivations from developing programming skills and computational thinking other subject knowledge, systems thinking, to 21st Century skills. Within this literature, as explored in Chapter 2,  a strand grouped around different forms of technical fluency [@papert_technological_1995]  with common features of domain proficiency, self-expression and identity formation and an experience of flow. The following discussion contributes to this strand within CGD&P research.
+Chapter 2 explored the diversity with in CGD&P research concerning motivations from developing programming skills and computational thinking other subject knowledge, systems thinking, to 21st Century skills. Within this literature, as explored in Chapter 2,  a strand grouped around different forms of technical fluency [@papert_technological_1995]  with common features of domain proficiency, self-expression and identity formation and an experience of flow. The following discussion contributes to this strand within CGD&P research.
 
 One of the motivational factors guiding the evolution of the learning design of this study was to keep participants able to effectively share their social identity within game making and thus remaining or in a state of flow [@mao_optimal_2016] [^fl]. The guiding principle being to build technical proficiency with the relevant technology to to allow the share interests and identity within a community of peers.
 
@@ -807,6 +825,29 @@ PERHAPS BUT HOW SO? -->
 
 LINK BACK TO NEW MODEL OF DESIGN BUILD TEST IN CHAPTER 5.
 Signposting to Chapter 7.
+
+
+### Closing synthesis
+
+**patterns of use and trajectories of learning**
+
+3GAT guides researchers  to describe expansions of the object of activity. To recap the complex nature of the component part of object according to activity theory, includes the physical or digital objects being worked, and the object concept incorporating the motivations of the participants and the overall activity [@blunden_activity_2023]. Part of the process of expansion of the complex object of activity, is driven by the unfixed nature of the motivations of those taking part within this research process [@cormier2008rhizomatic]. Chapter 5 charted shifting motivations via the changing learning design [^sm]. As a learning designer, in P3 I attempted to reduce play paradox outlined above by encouraging and highlighting social and cultural aspect of the object at play.
+
+<!-- GDPs played layered roles in the learning process: as **scaffolds**, **shared concepts**, and **catalysts for divergence**. -->
+
+The findings of this chapter extend existing studies on use of GDPs, within educational context for young people. In Chapter two a rare study addressing [@eriksson_using_2019],  primarily focused on utility for researchers, positioning GDPs as a a common language between researchers to  structure analytical framing. The broad range focused on practice in this chapter extends this work significantly QUICK SUMMARY HOW?. In addition, in Chapter 7 broader conceptual contributions  in relation to abstract and concrete dimensions of knowledge and practice are developed.  
+
+<!-- The process of curating patterns for Stringforce involved selecting only 14 from the full collection [@eriksson_using_2019]. The criteria for choosing patterns to include in the co-design stages considered several factors. Concrete patterns were prioritised over more abstract ones to support learner comprehension, selected patterns aligned with the learners' capabilities, and patterns related to game mechanics were favoured, along with those suggested by the learners. The Stringforce study highlighted several aspects of GDP utility. GDP concepts functioned as a common language between researchers and participants, helped structure analytical framing, and served as reference points for participants' design proposals [@eriksson_using_2019]. Overall, the findings primarily emphasise benefits for researchers, advancing GDPs as a form of intermediate knowledge that contributes to the field of child-computer interaction research (CCI) -->
+
+
+<!--
+* GDPs played layered roles in the learning process: as **scaffolds**, **shared concepts**, and **catalysts for divergence**.
+* Their mediating function evolved through use, supporting not just understanding but transformation.
+* The observed trajectory moves from **mediation** to **fluency**, from **structured repetition** to **flexible improvisation**, laying the groundwork for **emerging agency**.
+* While full exploration of agency is the focus of Chapter 7, this chapter has shown how **GDPs seeded shifts in participation and ownership**, contributing to the expanding object of activity. -->
+
+
+
 
 
 <!-- Returning to the gaps in research outline in Chapter 2 in regarding CGD&P
